# tradesight-backend-old-version

./: .gitignore  README.md  activate_env.sh  app.py  db.py  mydatabase.db  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/endpoints/: account.py  (+5 more)
app/core/: config.py  security.py
app/database/: database.py  models.py
app/models_store/: ADANIENT.NS_model.h5  ADANIPORTS.NS_model.h5  ASIANPAINT.NS_model.h5  AXISBANK.NS_model.h5  BAJAJFINSV.NS_model.h5  BAJFINANCE.NS_model.h5  BHARTIARTL.NS_model.h5  BPCL.NS_model.h5  BRITANNIA.NS_model.h5  CIPLA.NS_model.h5  COALINDIA.NS_model.h5  DIVISLAB.NS_model.h5  DRREDDY.NS_model.h5  EICHERMOT.NS_model.h5  GAIL.NS_model.h5  GRASIM.NS_model.h5  HCLTECH.NS_model.h5  HDFCBANK.NS_model.h5  HDFCLIFE.NS_model.h5  HEROMOTOCO.NS_model.h5  HINDALCO.NS_model.h5  HINDUNILVR.NS_model.h5  ICICIBANK.NS_model.h5  INDUSINDBK.NS_model.h5  INFY.NS_model.h5  IOC.NS_model.h5  ITC.NS_model.h5  JSWSTEEL.NS_model.h5  KOTAKBANK.NS_model.h5  LT.NS_model.h5  M&M.NS_model.h5  MARUTI.NS_model.h5  NESTLEIND.NS_model.h5  NTPC.NS_model.h5  ONGC.NS_model.h5  POWERGRID.NS_model.h5  RELIANCE.NS_model.h5  SBILIFE.NS_model.h5  SBIN.NS_model.h5  SHREECEM.NS_model.h5  (+10 more)
app/schemas/: account.py  prediction.py  profit.py  stock_models.py  symbol.py  transaction.py  user.py
app/services/: helper_service.py  mover_service.py  prediction_service.py  stock_service.py  transaction_service.py
instance/: tradesight.db
src/controllers/: last_trading_day_data.py  live_stock_data.py  prev_day_stock_data.py
src/models/: db_models.py
